--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+*.gem
+.rspec
+.yardoc/
 .bundle/
 log/*.log
+tmp/
 pkg/
+spec/dummy/db/*.sqlite3
+spec/dummy/log/*.log
+spec/dummy/tmp/
+spec/dummy/.sass-cache
+Gemfile.lock
+Guardfile
