--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ rvm:
   - 2.0.0
   - 2.1.1
 
-script: 'bundle exec rspec spec'
+script:
+  - bundle exec rake db:schema:load
+  - bundle exec rake spec
 
 gemfile:
   - Gemfile
